logs/bpcs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bpcs'...
Compiling './lib/python3.5/site-packages/bpcs/array_grid_old.py'...
***   File "./lib/python3.5/site-packages/bpcs/array_grid_old.py", line 9
    print error_msg
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpcs/images2gif.py'...
***   File "./lib/python3.5/site-packages/bpcs/images2gif.py", line 196
    print n, 'frames written'
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpcs/plot_image.py'...
***   File "./lib/python3.5/site-packages/bpcs/plot_image.py", line 60
    print word.strip()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpcs/test_utils.py'...
***   File "./lib/python3.5/site-packages/bpcs/test_utils.py", line 8
    def show_html_diff((f1, f1_name), (f2, f2_name)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpcs/text_to_image.py'...
***   File "./lib/python3.5/site-packages/bpcs/text_to_image.py", line 51
    print "WARNING: txt will be replicated by {0} chars when printed to image".format(diff)
                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bpcs-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
